--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table>
         <tr>
          <!--Header-->
-            <td></td>
+            <td><img src="https://media.jobs.ch/images/cc50b5e0-890e-4749-93b6-eb232f7794b5/banner_image-2386x796.png?dimensions=1200x400&transform=crop" alt="banner"></td>
         </tr>
         <!--Menu-->
         <tr>
@@ -17,7 +17,7 @@
                 <table>
                     <tr>
                         <td><a href="index.html">Inicio</a></td>
-                        <td><a href="">¿Quien soy?</a></td>
+                        <td><a href="http://">¿Quien soy?</a></td>
                         <td><a href="http://">Hobbies</a></td>
                         <td><a href="http://">Contactame</a></td>
                     </tr>
