--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi primera pagina</title>
+    <style>
+        *{
+            margin:0;
+        }
+            body{
+                background-color: lightslategrey;
+            }
+        a{
+            text-decoration: none;
+            background-color: darkcyan;
+            padding: 10px 20px;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <table>
